appId: com.sarallekhan
---
- launchApp:
    clearState: true
- tapOn:
    id: "search-input"
- inputText: "Maestro Search Test"
- assertVisible: "No matching notes found"
- tapOn:
    id: "fab-add-note"
- tapOn:
    id: "editor-title-input"
- inputText: "Maestro Search Test"
- tapOn:
    id: "editor-done-button"
- tapOn:
    id: "search-input"
- inputText: "Maestro Search Test"
- assertVisible: "MAESTRO SEARCH TEST"
