appId: com.sarallekhan
---
- launchApp:
    clearState: true
- tapOn:
    id: "fab-add-note"
- tapOn:
    id: "editor-title-input"
- inputText: "Fresh Maestro Note"
- tapOn:
    id: "editor-done-button"
- assertVisible: "FRESH MAESTRO NOTE"
